# Analogy-Engine

./: .cursorrules  .env.example  .gitignore  LICENSE  README.md  app.py  data_manager.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: quality.yml
.streamlit/: config.toml
agents/: __init__.py  architect.py  base.py  critic.py  librarian.py  matcher.py  scout.py  visionary.py
config/: pre-commit-config.yaml
core/: __init__.py  config.py  ontology.py  schema.py
docs/: ARCHITECTURE.md  TEST_QUERIES.md
scripts/: .gitignore  __init__.py  block_cursor_commit_msg.sh  check_docs.py  verify_quality.sh  visualize_analogy.py
tests/: __init__.py  test_agents.py  test_config.py  test_data_manager.py  test_exports.py  test_librarian.py  test_ontology.py  test_schema.py
