[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "analogy-engine"
version = "0.1.0"
description = "Moteur d'analogies basé sur des agents et le graphe de propriétés logiques."
readme = "README.md"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Long prompt strings and demo data; keep line-length elsewhere
"agents/*.py" = ["E501"]
"app.py" = ["E501"]
"data_manager.py" = ["E501"]
"tests/*.py" = ["E501"]
"core/ontology.py" = ["E501"]
"core/schema.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["core", "agents"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ["\\.venv", "venv"]

[[tool.mypy.overrides]]
module = "autogen.*"
ignore_missing_imports = true
